--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,10 +22,10 @@ jobs:
     - name: Install dependencies  # Step to install libraries
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt
 
     - name: Run tests  # Step to execute pytest
-      run: pytest test_app.py
+      run: python -m pytest test_app.py -v
 
   deploy:  # Job for deployment, depends on test job
     needs: test  # Only run if test succeeds
